# C-Vorlesung

./: README.md
Abgabe/: CMakeLists.txt  main.c
Abgabe/functions/: CMakeLists.txt
Abgabe/functions/include/: decode.h  encode.h  help_functions.h  input_output.h  morse_tables.h
Abgabe/functions/src/: decode.c  decode.c.orig  encode.c  encode.c.orig  help_functions.c  input_output.c  morse_tables.c
Einheit_1/Einfaches_Helloworld/: Hello_World  Hello_World.c  Hello_World.i  Hello_World.s
Einheit_2/: main1.c  main2.c  main2.c.orig  oneline
Einheit_3/: main.c  removews
Einheit_3/include/: whitespaces.h
Einheit_3/src/: cMakeLists.txt  whitespaces.c
Einheit_4/: CMakeLists.txt  hexdump.c  hexe  main.c
Hausaufgabe/: AuswertungTopps.md  lintosae  lintosae.c  test.txt
extra/: decoded_datei  encoded_datei  morse
